--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+# unclear if this improves perf when using the mold linker
+#bevy = { version = "0.15", features = ["dynamic_linking"] }
 bevy = "0.15"
+
+# enable faster linker (mold)
+[target.x86_64-unknown-linux-gnu]
+linker = "clang"
+rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
 
 [profile.dev]
 opt-level = 1
