--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ bevy = "0.15"
 # enable faster linker (mold)
 [target.x86_64-unknown-linux-gnu]
 linker = "clang"
-rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
+rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold", "-Zshare-generics=y"]
 
 [profile.dev]
 opt-level = 1
