--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 #bevy = { version = "0.15", features = ["dynamic_linking"] }
 bevy = "0.15"
 log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
+rand = "0.9"
+rand_chacha = "0.9.0"
 
 [profile.dev]
 opt-level = 1
