--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 bevy = "0.15"
 log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
 bevy_turborand = "0.10.0"
+wasm-bindgen = "=0.2.100"
 
 [profile.dev]
 opt-level = 1
