--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,14 @@ edition = "2021"
 # unclear if this improves perf when using the mold linker
 #bevy = { version = "0.15", features = ["dynamic_linking"] }
 bevy = "0.15"
-log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
+log = { version = "*", features = [
+    "max_level_debug",
+    "release_max_level_warn",
+] }
 bevy_turborand = "0.10.0"
 wasm-bindgen = "=0.2.100"
+bevy_common_assets = "0.12"
+
 
 [profile.dev]
 opt-level = 1
@@ -23,7 +28,7 @@ codegen-units = 1
 lto = "thin"
 
 [profile.wasm-release]
-# wasm really likes small binaries, so optimize for size. 
+# wasm really likes small binaries, so optimize for size.
 inherits = "release"
 opt-level = "s"
 strip = "debuginfo"
