--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ log = { version = "*", features = [
 ] }
 bevy_turborand = "0.10.0"
 wasm-bindgen = "=0.2.100"
-bevy_common_assets = "0.12"
+bevy_easy_config = { path = "../bevy_easy_config" }
+serde = { version = "1" } # Needed for bevy_easy_config
 
 
 [profile.dev]
