--- a/.github/workflows/deploy_web.yml
+++ b/.github/workflows/deploy_web.yml
@@ -21,7 +21,7 @@ jobs:
           components: rustfmt, clippy
 
       - name: Install wasm-bindgen-cli
-        run: cargo install wasm-bindgen-cli
+        run: cargo install -f wasm-bindgen-cli --version 0.2.99
 
       - name: Build Project for WASM
         run: |
