--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ log = { version = "*", features = [
 bevy_turborand = "0.10.0"
 wasm-bindgen = "=0.2.100"
 bevy_common_assets = {version="0.12", features = ["ron"]}
-serde = { version = "1" } # Needed for bevy_easy_config
-
+serde = { version = "1" } # Needed for bevy_common_assets
+web-sys = "0.3.77"
 
 [profile.dev]
 opt-level = 1
